2007-04-02 [paul]	2.8.1cvs82

	* src/plugins/bogofilter/bogofilter_gtk.c
		a few English changes

2007-04-02 [colin]	2.8.1cvs81

	* src/image_viewer.c
		Fix transparent images by using
		GtkImage
	* src/messageview.c
		Flush events (on new windows) to avoid
		having the textview's image resize fail
		to know the available width

2007-04-01 [colin]	2.8.1cvs80

	* src/prefs_account.c
		If no MH mailbox exist, when creating a POP/Local
		account, just create and use the default one 
		instead of bailing with a "Mailbox doesn't exist"
		error

2007-03-31 [colin]	2.8.1cvs79

	* src/prefs_account.c
		Create signature file if it doesn't exist
		before editing
	* src/prefs_toolbar.c
		Maemo: Move "Use default" on the left so
		that people can find it
	* src/common/defs.h
		Maemo: make default editor "Maemopad", 
		default signature file "MyDocs/signature.txt"

2007-03-31 [colin]	2.8.1cvs78

	* src/prefs_account.c
		Maemo: rework account prefs so
		that less horizontal scrolling
		is required

2007-03-31 [colin]	2.8.1cvs77

	* src/folderview.c
	* src/prefs_common.c
	* src/prefs_common.h
		Fix bug 1167, 'Allow not displaying zeros 
		in folder list'. Patch by MartinP

2007-03-31 [colin]	2.8.1cvs76

	* AUTHORS
		Add Jean-Luc Biord

2007-03-31 [colin]	2.8.1cvs75

	* src/imap.c
		Apply patch from bug 1172, direct
		access to the folder's session instead
		of using getter. Patch by MartinP

2007-03-31 [paul]	2.8.1cvs74

	* src/gtk/authors.h
		no need to list Fabien twice!

2007-03-31 [colin]	2.8.1cvs73

	* src/inc.c
		If we're currently "overriding for %d minutes",
		don't ask

2007-03-31 [colin]	2.8.1cvs72

	* src/compose.c
	* src/imap.c
	* src/inc.c
	* src/inc.h
	* src/messageview.c
	* src/news.c
	* src/plugins/spamassassin/spamassassin.c
		Offline override: Add a parameter to allow
		asking even if the override timer is running.
		Allows to ask every time the user makes an
		explicit action needing online access (such
		as Get Mail), and not when the action is 