@@ -2499,3 +2499,4 @@
 ( cvs diff -u -r 1.105.2.91 -r 1.105.2.92 src/prefs_account.c;  ) > 2.8.1cvs80.patchset
 ( cvs diff -u -r 1.1.2.16 -r 1.1.2.17 src/image_viewer.c;  cvs diff -u -r 1.94.2.130 -r 1.94.2.131 src/messageview.c;  ) > 2.8.1cvs81.patchset
 ( cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/plugins/bogofilter/bogofilter_gtk.c;  ) > 2.8.1cvs82.patchset
+( cvs diff -u -r 1.395.2.294 -r 1.395.2.295 src/summaryview.c;  cvs diff -u -r 1.1.2.28 -r 1.1.2.29 src/plugins/bogofilter/bogofilter.c;  cvs diff -u -r 1.18.2.50 -r 1.18.2.51 src/plugins/spamassassin/spamassassin.c;  ) > 2.8.1cvs83.patchset
